<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/tv_hello_blank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center|top"
        android:text="@string/hello_blank_fragment" />

    <Button
        android:id="@+id/btn_showToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center|top"
        android:text="@string/show_toast" />

    <Button
        android:id="@+id/btn_showDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center|top"
        android:text="@string/show_dialog" />

    <CheckBox
        android:id="@+id/chb_disappear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center|top"
        android:text="@string/make_all_disappear" />

</LinearLayout>